data/all_generated_tests/raw_wast_tests/nop_IncorrectConditionEvaluation_453.wast
;; 4. Place multiple `nop` instructions interspersed with `br_if` conditions within nested blocks and validate if WebAssembly maintains correct branch behavior while wizard_engine introduces trace-induced deviations.

(assert_invalid
  (module 
    (func $test
      (block
        (loop
          (nop)
          (br_if 0 (i32.const 1))  ;; branch to loop start if condition is true
          (nop)
          (br_if 1 (i32.const 0))  ;; branch to block end if condition is false
          (nop)
        )
      )
    )
  )
  "type mismatch"
)